<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_center_focus_weak_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_Escaneo"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_Escaneo" />
        <item
            android:id="@+id/nav_LecturaQR"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_LecturaQR" />
        <item
            android:id="@+id/nav_RegistroQR"
            android:icon="@drawable/ic_format_shapes_black_24dp"
            android:title="@string/menu_RegistroQR" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
        </menu>
    </item>

</menu>
