<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.appproyectofactura.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_home_detail"
        android:name="com.example.appproyectofactura.ui.home.HomeFragmentDetail"
        android:label="@string/menu_home_detail"
        tools:layout="@layout/fragment_home_detail" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.appproyectofactura.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_LecturaQR"
        android:name="com.example.appproyectofactura.ui.mainlecturaqr.MainLecturaQrFragment"
        android:label="@string/menu_LecturaQR"
        tools:layout="@layout/main_lectura_qr_fragment" />

    <fragment
        android:id="@+id/nav_RegistroQR"
        android:name="com.example.appproyectofactura.ui.mainregistroqr.MainRegistroQrFragment"
        android:label="@string/menu_RegistroQR"
        tools:layout="@layout/main_registro_qr_fragment" />
    <fragment
        android:id="@+id/nav_Escaneo"
        android:name="com.example.appproyectofactura.ui.mainescaneo.MainEscaneoFragment"
        android:label="@string/menu_Escaneo"
        tools:layout="@layout/main_escaneo_fragment" />
</navigation>